<resources>
    <string name="app_name">Sign Up Form</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="password_input">Please enter a password</string>
    <string name="confirm">Confirm:</string>
    <string name="confirm_input">Please confirm your password</string>
    <string name="user_input">Please enter your name</string>
    <string name="submit_button">Submit</string>
    <string name="random">random</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
