<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/field"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/username"
            android:text="@string/username"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/user_input"
            android:hint="@string/user_input"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/password_field"
        android:layout_below="@id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/password"
            android:text="@string/password"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/password_input"
            android:hint="@string/password_input"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/confirm_field"
        android:layout_below="@id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/confirm"
            android:text="@string/confirm"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/confirm_input"
            android:hint="@string/confirm_input"
            android:layout_toRightOf="@id/confirm"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/submit_button"
        android:layout_below="@id/field"
        android:layout_alignRight="@id/field"
        android:text="@string/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
